--- a/Source/MinimalSqlExport/MinimalSqlExport.Core/MinimalSqlExport.Core.csproj
+++ b/Source/MinimalSqlExport/MinimalSqlExport.Core/MinimalSqlExport.Core.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
